--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ layout: default
 permalink: /404.html
 ---
 
-# Page not found...
+# Oops ! Page not found...
 
-## [Back to home](../)
+## [&#x2190;Back to home](../)
